log.txt
video - 6

Python 3.12.5 (tags/v3.12.5:ff3bc82, Aug  6 2024, 20:45:27) [MSC v.1940 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
Ctrl click to launch VS Code Native REPL
>>> 12+12
24
>>> 2.5*5
12.5
>>> 2**100
1267650600228229401496703205376
>>> import math
>>> math.pi
3.141592653589793
>>> import random
>>> random.random()
0.13833750831203506
>>> random.choice([1,2,3,4,5])
2
>>> random.choice([1,2,3,4,5])
2
>>> random.choice([1,2,3,4,5])
4
>>> random.choice([1,2,3,4,5])
2
>>>
>>> random.choice([1,2,3,4,5])
3
>>> random.choice([1,2,3,4,5])
5
>>> random.choice([1,2,3,4,5])
2
>>> random.choice([1,2,3,4,5])
1
>>> username = "anis5165"
>>> len(username)
8
>>> username[0]
'a'
>>> username[0] = 'A'
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'str' object does not support item assignment
>>> username[-2]
'6'
>>> username[1:3]
'ni'
>>> dir(username)
['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mod__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__rmod__', '__rmul__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'capitalize', 'casefold', 'center', 'count', 'encode', 'endswith', 'expandtabs', 'find', 'format', 'format_map', 'index', 'isalnum', 'isalpha', 'isascii', 'isdecimal', 'isdigit', 'isidentifier', 'islower', 'isnumeric', 'isprintable', 'isspace', 'istitle', 'isupper', 'join', 'ljust', 'lower', 'lstrip', 'maketrans', 'partition', 'removeprefix', 'removesuffix', 'replace', 'rfind', 'rindex', 'rjust', 'rpartition', 'rsplit', 'rstrip', 'split', 'splitlines', 'startswith', 'strip', 'swapcase', 'title', 'translate', 'upper', 'zfill']
>>> mylist = [123,"anis",3.14]
>>> mylist
[123, 'anis', 3.14]
>>> len(mylist)
3
>>> mylist[0]  
123
>>> mylist[-1]
3.14
>>> myD = {'1' : "lemon tea", '2' : "ginger tea", "superman" : "hanry cavill"}
>>> myD
{'1': 'lemon tea', '2': 'ginger tea', 'superman': 'hanry cavill'}
>>> myD['comics]
  File "<stdin>", line 1
    myD['comics]
        ^
SyntaxError: unterminated string literal (detected at line 1)
>>> myD['comics']
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyError: 'comics'
>>> myD['superman']
'hanry cavill'
>>> myTup = (1,2,3)
>>> myTup[0]
1
>>> myTup[-1]
3
>>> len(myTup)
3





video - 7

Python 3.12.5 (tags/v3.12.5:ff3bc82, Aug  6 2024, 20:45:27) [MSC v.1940 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
Ctrl click to launch VS Code Native REPL
>>> import sys
>>> sys.getrefcount(24601)
3
>>> sys.getrefcount("anis5165"
... 
... 
... clw
  File "<stdin>", line 1
    sys.getrefcount("anis5165"
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> sys.getrefcount("anis5165")
4294967295
>>> sys.getrefcount("ani5")    
4294967295
>>> sys.getrefcount(2)     
4294967295
>>> a = 3
>>> a = 'anis5165'
>>> a = 5
>>> b = 2
>>> a
5
>>> b
2
>>> a = a + 2
>>> a
7
>>> myListOne = [1,2,3]
>>> myListTwo = myListOne
>>> myListTwo            
[1, 2, 3]
>>> myListOne = 'chai'
>>> myListTwo
[1, 2, 3]
>>> myListOne = [1,2,3]  
>>> myListTwo
[1, 2, 3]
>>> myListOne         
[1, 2, 3]
>>> myListOne[0] = 33
>>> myListOne        
[33, 2, 3]
>>> myListTwo        
[1, 2, 3]
>>> .............
  File "<stdin>", line 1
    .............
       ^^^
SyntaxError: invalid syntax
>>>
>>> 
>>> 
>>> li = [1,2,3]
>>> l2 = li
>>> l2     
[1, 2, 3]
>>> li
[1, 2, 3]
>>> li[0] = 33
>>> li
[33, 2, 3]
>>> l2
[33, 2, 3]
>>>
>>> 
>>> 
>>> 
>>> p1 = [1,2,3,4,5]
>>> p2 = p1
>>> p2 = [1,2,3,4,5]
>>> p1[0] = 553
>>> p1
[553, 2, 3, 4, 5]
>>> p2
[1, 2, 3, 4, 5]
>>>
>>> 
>>> 
>>> 
>>> 
>>> h1 = [1,2,3]
>>> h2 = h1[:] #copy
>>> h1
[1, 2, 3]
>>> h2
[1, 2, 3]
>>> h1[0] = 55
>>> j1
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'j1' is not defined. Did you mean: 'p1'?
>>> h1
[55, 2, 3]
>>> h2
[1, 2, 3]
>>>
